--- a/W1D4/style.css
+++ b/W1D4/style.css
@@ -40,7 +40,7 @@ main div {
 }
 
 #background-img-top {
-  background-image: url("W1D4/assets/bg-image.png");
+  background-image: url("assets/bg-image.png");
   max-width: 100vw;
   height: 120px;
   box-shadow: 5px 5px 5px 0px rgba(11, 16, 20, 0.151);
